[gd_scene load_steps=22 format=2]

[ext_resource path="res://ForestTiles128x128/ForestTileset.tres" type="TileSet" id=1]
[ext_resource path="res://particles/chests/Chests.gd" type="Script" id=2]
[ext_resource path="res://particles/chests/chest1.tscn" type="PackedScene" id=3]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=4]
[ext_resource path="res://NPC/NPC.tscn" type="PackedScene" id=5]
[ext_resource path="res://sound/MusicHandler.gd" type="Script" id=6]
[ext_resource path="res://sound/sfx/sfx_open_door.wav" type="AudioStream" id=7]
[ext_resource path="res://sound/sfx/sfx_close_door.wav" type="AudioStream" id=8]
[ext_resource path="res://sound/sfx/sfx_coin_flip.wav" type="AudioStream" id=9]
[ext_resource path="res://sound/sfx/sfx_switch.wav" type="AudioStream" id=10]
[ext_resource path="res://sound/sfx/sfx_move_block.wav" type="AudioStream" id=11]
[ext_resource path="res://sound/sfx/sfx_chop_wood.wav" type="AudioStream" id=12]
[ext_resource path="res://sound/sfx/sfx_falling_tree.wav" type="AudioStream" id=13]
[ext_resource path="res://sound/sfx/sfx_open_chest.wav" type="AudioStream" id=14]
[ext_resource path="res://sound/sfx/sfx_locked.wav" type="AudioStream" id=15]
[ext_resource path="res://sound/sfx/sfx_pick_up.wav" type="AudioStream" id=16]
[ext_resource path="res://sound/music/town_music.ogg" type="AudioStream" id=17]
[ext_resource path="res://particles/MoveArea/MoveArea.gd" type="Script" id=18]
[ext_resource path="res://particles/MoveArea/MoveArea.tscn" type="PackedScene" id=19]
[ext_resource path="res://particles/SwitchArea/SwitchArea.tscn" type="PackedScene" id=20]
[ext_resource path="res://SceneManager.gd" type="Script" id=21]

[node name="area1" type="Node2D" index="0"]

_sections_unfolded = [ "Transform", "Visibility" ]

[node name="floor" type="TileMap" parent="." index="0"]

mode = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 128, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -917505, 3, 0, -851973, 3, 0, -851972, 3, 0, -851971, 3, 0, -851970, 3, 0, -851969, 3, 0, -917504, 3, 0, -786437, 3, 0, -786436, 3, 0, -786435, 3, 0, -786434, 3, 0, -786433, 3, 0, -851968, 3, 0, -851967, 3, 0, -720908, 127, 0, -720901, 3, 0, -720898, 7, 0, -720897, 3, 0, -786432, 3, 0, -786431, 3, 0, -786430, 3, 0, -786429, 3, 0, -786424, 3, 0, -655365, 7, 0, -655364, 7, 0, -655363, 7, 0, -655362, 7, 0, -655361, 3, 0, -720896, 3, 0, -720895, 3, 0, -720894, 3, 0, -720893, 9, 0, -720892, 9, 0, -720891, 10, 0, -720889, 10, 0, -589833, 3, 0, -589832, 3, 0, -589831, 3, 0, -589830, 3, 0, -589828, 7, 0, -589827, 7, 0, -589826, 7, 0, -589825, 7, 0, -655360, 3, 0, -655359, 8, 0, -655358, 8, 0, -655357, 16, 0, -655356, 16, 0, -655355, 8, 0, -655354, 10, 0, -655353, 10, 0, -655352, 10, 0, -524297, 3, 0, -524296, 3, 0, -524295, 3, 0, -524294, 3, 0, -524292, 7, 0, -524291, 7, 0, -524290, 3, 0, -524289, 7, 0, -589824, 7, 0, -589823, 3, 0, -589822, 8, 0, -589821, 16, 0, -589820, 13, 0, -589819, 3, 0, -589818, 9, 0, -589817, 10, 0, -589816, 10, 0, -458761, 3, 0, -458760, 3, 0, -458759, 3, 0, -458758, 3, 0, -458757, 3, 0, -458756, 7, 0, -458755, 7, 0, -458754, 8, 0, -458753, 8, 0, -524288, 7, 0, -524287, 7, 0, -524286, 7, 0, -524285, 16, 0, -524284, 16, 0, -524283, 8, 0, -524282, 8, 0, -524281, 9, 0, -524280, 10, 0, -393225, 3, 0, -393223, 3, 0, -393222, 3, 0, -393221, 3, 0, -393220, 7, 0, -393219, 10, 0, -393218, 7, 0, -393217, 8, 0, -458752, 3, 0, -458751, 7, 0, -458750, 7, 0, -458749, 13, 0, -458748, 16, 0, -458747, 3, 0, -458746, 6, 0, -458745, 9, 0, -458744, 8, 0, -458743, 10, 0, -458742, 9, 0, -327689, 3, 0, -327687, 3, 0, -327686, 3, 0, -327685, 3, 0, -327684, 10, 0, -327683, 10, 0, -327682, 3, 0, -327681, 8, 0, -393216, 3, 0, -393215, 7, 0, -393214, 3, 0, -393213, 13, 0, -393212, 13, 0, -393211, 3, 0, -393210, 6, 0, -393209, 9, 0, -393208, 8, 0, -393207, 5, 0, -393206, 10, 0, -262153, 3, 0, -262152, 3, 0, -262151, 3, 0, -262150, 10, 0, -262149, 3, 0, -262148, 10, 0, -262147, 10, 0, -262146, 8, 0, -262145, 3, 0, -327680, 3, 0, -327679, 7, 0, -327678, 7, 0, -327677, 16, 0, -327676, 16, 0, -327675, 3, 0, -327674, 5, 0, -327673, 6, 0, -327672, 9, 0, -327671, 8, 0, -327670, 10, 0, -196617, 3, 0, -196616, 3, 0, -196615, 3, 0, -196614, 7, 0, -196613, 10, 0, -196612, 10, 0, -196611, 10, 0, -196610, 8, 0, -196609, 3, 0, -262144, 3, 0, -262143, 7, 0, -262142, 7, 0, -262141, 16, 0, -262140, 13, 0, -262139, 3, 0, -262138, 5, 0, -262137, 3, 0, -262136, 9, 0, -262135, 8, 0, -262134, 10, 0, -262133, 10, 0, -131081, 3, 0, -131080, 4, 0, -131079, 3, 0, -131078, 10, 0, -131077, 10, 0, -131076, 10, 0, -131075, 10, 0, -131074, 3, 0, -131073, 7, 0, -196608, 7, 0, -196607, 13, 0, -196606, 13, 0, -196605, 13, 0, -196604, 13, 0, -196603, 3, 0, -196602, 5, 0, -196601, 3, 0, -196600, 9, 0, -196599, 6, 0, -196598, 10, 0, -196597, 3, 0, -65545, 3, 0, -65544, 4, 0, -65543, 3, 0, -65542, 10, 0, -65541, 10, 0, -65540, 10, 0, -65539, 10, 0, -65538, 7, 0, -65537, 3, 0, -131072, 13, 0, -131071, 13, 0, -131070, 13, 0, -131069, 13, 0, -131068, 15, 0, -131067, 6, 0, -131066, 6, 0, -131065, 8, 0, -131064, 9, 0, -131063, 10, 0, -131062, 10, 0, -131061, 10, 0, -131060, 3, 0, -131059, 3, 0, -131058, 3, 0, -131057, 3, 0, -9, 3, 0, -8, 4, 0, -7, 4, 0, -6, 8, 0, -5, 10, 0, -4, 10, 0, -3, 10, 0, -2, 14, 0, -1, 13, 0, -65536, 13, 0, -65535, 13, 0, -65534, 13, 0, -65533, 15, 0, -65532, 13, 0, -65531, 3, 0, -65530, 5, 0, -65529, 8, 0, -65528, 9, 0, -65527, 6, 0, -65526, 6, 0, -65525, 10, 0, -65524, 3, 0, -65523, 3, 0, -65522, 3, 0, -65521, 3, 0, -65520, 3, 0, 65527, 3, 0, 65528, 3, 0, 65529, 4, 0, 65530, 4, 0, 65531, 8, 0, 65532, 8, 0, 65533, 10, 0, 65534, 4, 0, 65535, 13, 0, 0, 13, 0, 1, 13, 0, 2, 15, 0, 3, 13, 0, 4, 19, 0, 5, 5, 0, 6, 8, 0, 7, 3, 0, 8, 9, 0, 9, 6, 0, 10, 6, 0, 11, 10, 0, 12, 3, 0, 13, 3, 0, 14, 3, 0, 15, 3, 0, 16, 3, 0, 131063, 3, 0, 131064, 3, 0, 131065, 4, 0, 131066, 4, 0, 131067, 4, 0, 131068, 8, 0, 131069, 8, 0, 131070, 3, 0, 131071, 3, 0, 65536, 3, 0, 65537, 3, 0, 65538, 5, 0, 65539, 3, 0, 65540, 3, 0, 65541, 7, 0, 65542, 8, 0, 65543, 3, 0, 65544, 9, 0, 65545, 6, 0, 65546, 6, 0, 65547, 5, 0, 65548, 3, 0, 65549, 3, 0, 65550, 3, 0, 65551, 3, 0, 65552, 3, 0, 196599, 3, 0, 196600, 3, 0, 196601, 3, 0, 196602, 4, 0, 196603, 4, 0, 196604, 4, 0, 196605, 8, 0, 196606, 8, 0, 196607, 3, 0, 131072, 3, 0, 131073, 3, 0, 131074, 5, 0, 131075, 3, 0, 131076, 3, 0, 131077, 8, 0, 131078, 3, 0, 131079, 3, 0, 131080, 9, 0, 131081, 6, 0, 131082, 6, 0, 131083, 3, 0, 131084, 3, 0, 131085, 3, 0, 131086, 3, 0, 131087, 3, 0, 131088, 3, 0, 262138, 4, 0, 262139, 4, 0, 262140, 4, 0, 262141, 4, 0, 262142, 10, 0, 262143, 10, 0, 196608, 21, 0, 196609, 22, 0, 196610, 8, 0, 196611, 8, 0, 196612, 8, 0, 196613, 3, 0, 196614, 7, 0, 196615, 3, 0, 196616, 9, 0, 196617, 6, 0, 196618, 3, 0, 196619, 3, 0, 196620, 3, 0, 196621, 3, 0, 196622, 3, 0, 196623, 3, 0, 196624, 3, 0, 327674, 3, 0, 327675, 4, 0, 327676, 4, 0, 327677, 4, 0, 327678, 3, 0, 327679, 3, 0, 262144, 20, 0, 262145, 19, 0, 262146, 8, 0, 262147, 3, 0, 262148, 8, 0, 262149, 8, 0, 262150, 3, 0, 262151, 3, 0, 262152, 6, 0, 262153, 6, 0, 262154, 3, 0, 262155, 3, 0, 262156, 3, 0, 262157, 3, 0, 262158, 3, 0, 262159, 3, 0, 262160, 3, 0, 393211, 3, 0, 393212, 3, 0, 393213, 3, 0, 393214, 3, 0, 393215, 8, 0, 327680, 6, 0, 327681, 6, 0, 327682, 10, 0, 327683, 6, 0, 327684, 6, 0, 327685, 8, 0, 327686, 8, 0, 327687, 6, 0, 327688, 6, 0, 327689, 3, 0, 327690, 3, 0, 327691, 3, 0, 327692, 10, 0, 327693, 3, 0, 327694, 3, 0, 327695, 3, 0, 327696, 3, 0, 458747, 3, 0, 458748, 3, 0, 458749, 3, 0, 458750, 3, 0, 458751, 3, 0, 393216, 8, 0, 393217, 8, 0, 393218, 6, 0, 393219, 6, 0, 393220, 10, 0, 393221, 6, 0, 393222, 8, 0, 393223, 6, 0, 393224, 6, 0, 393225, 3, 0, 393226, 3, 0, 393227, 3, 0, 393228, 3, 0, 393229, 3, 0, 393230, 3, 0, 393231, 3, 0, 393232, 3, 0, 524280, 127, 0, 524286, 3, 0, 458752, 3, 0, 458753, 3, 0, 458754, 8, 0, 458755, 8, 0, 458756, 8, 0, 458757, 10, 0, 458758, 8, 0, 458759, 8, 0, 458760, 6, 0, 458761, 3, 0, 458762, 3, 0, 458763, 3, 0, 458764, 3, 0, 458765, 3, 0, 458766, 3, 0, 458767, 3, 0, 589822, 3, 0, 589823, 3, 0, 524288, 3, 0, 524289, 3, 0, 524290, 3, 0, 524291, 3, 0, 524292, 3, 0, 524293, 3, 0, 524294, 3, 0, 524295, 3, 0, 524296, 3, 0, 524297, 3, 0, 524298, 10, 0, 524299, 3, 0, 524300, 3, 0, 524301, 3, 0, 524302, 3, 0, 524303, 3, 0, 655358, 3, 0, 655359, 3, 0, 589824, 3, 0, 589825, 3, 0, 589826, 3, 0, 589827, 3, 0, 589828, 3, 0, 589829, 3, 0, 589830, 3, 0, 589831, 3, 0, 589832, 3, 0, 589833, 3, 0, 589834, 3, 0, 589835, 3, 0, 589836, 3, 0, 589837, 3, 0, 589838, 3, 0, 589839, 3, 0, 655361, 3, 0, 655362, 3, 0, 655363, 3, 0, 655364, 3, 0, 655365, 3, 0, 655366, 3, 0, 655367, 3, 0, 655368, 3, 0, 655369, 3, 0, 655370, 3, 0, 655371, 3, 0, 655372, 3, 0, 655373, 3, 0, 655374, 3, 0, 655375, 3, 0, 720897, 3, 0, 720898, 3, 0, 720899, 3, 0, 720900, 3, 0, 720901, 3, 0, 720902, 3, 0, 720903, 3, 0, 720904, 3, 0, 720905, 3, 0, 720906, 3, 0, 720907, 3, 0, 720908, 3, 0, 720909, 3, 0 )
_sections_unfolded = [ "Cell" ]

[node name="Chests" type="Node2D" parent="." index="1"]

script = ExtResource( 2 )

[node name="chest1" parent="Chests" index="0" instance=ExtResource( 3 )]

position = Vector2( 271.468, -55.4017 )

[node name="walls" type="TileMap" parent="." index="2"]

editor/display_folded = true
mode = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 128, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = true
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -655365, 122, 0, -655364, 122, 0, -655363, 122, 0, -655362, 122, 0, -655361, 122, 0, -720896, 122, 0, -720895, 122, 0, -720894, 122, 0, -720893, 122, 0, -720892, 122, 0, -720891, 122, 0, -720890, 122, 0, -720887, 122, 0, -589831, 122, 0, -589830, 122, 0, -589829, 122, 0, -589828, 122, 0, -589827, 122, 0, -589826, 122, 0, -589825, 122, 0, -655360, 122, 0, -655359, 122, 0, -655355, 122, 0, -655354, 122, 0, -655353, 122, 0, -655352, 122, 0, -524295, 122, 0, -524294, 122, 0, -524293, 122, 0, -524292, 122, 0, -524291, 122, 0, -524289, 122, 0, -589824, 122, 0, -589823, 122, 0, -589822, 122, 0, -589817, 122, 0, -589816, 122, 0, -458759, 122, 0, -458757, 122, 0, -458756, 122, 0, -458755, 122, 0, -458754, 122, 0, -458753, 122, 0, -524288, 122, 0, -524287, 122, 0, -524286, 122, 0, -524280, 122, 0, -524279, 122, 0, -524278, 122, 0, -524277, 122, 0, -524276, 122, 0, -393223, 122, 0, -393222, 122, 0, -393221, 94, 0, -393219, 94, 0, -458752, 122, 0, -458751, 122, 0, -458750, 122, 0, -458743, 122, 0, -458742, 122, 0, -458741, 122, 0, -327687, 122, 0, -327686, 91, 0, -327682, 94, 0, -393216, 93, 0, -393215, 94, 0, -393208, 122, 0, -393207, 122, 0, -393206, 122, 0, -393205, 122, 0, -262151, 122, 0, -262148, 94, 0, -262145, 93, 0, -327674, 91, 0, -327672, 122, 0, -327671, 122, 0, -327670, 122, 0, -327668, 122, 0, -196615, 122, 0, -196613, 93, 0, -262132, 122, 0, -196601, 96, 0, -196597, 122, 0, -65543, 122, 0, -65541, 90, 0, -65538, 108, 0, -131063, 94, 0, -131061, 122, 0, -7, 122, 0, -65529, 94, 0, -65524, 122, 0, -65523, 122, 0, -65522, 122, 0, -65520, 122, 0, -65519, 122, 0, -65518, 122, 0, 65529, 122, 0, 65532, 96, 0, 9, 93, 0, 14, 122, 0, 15, 122, 0, 17, 122, 0, 18, 122, 0, 131065, 122, 0, 131066, 122, 0, 65538, 94, 0, 65540, 90, 0, 65541, 94, 0, 65546, 94, 0, 65550, 122, 0, 65552, 122, 0, 65553, 122, 0, 196601, 122, 0, 196606, 94, 0, 131072, 35, 0, 131082, 119, 0, 131087, 122, 0, 131088, 122, 0, 131090, 122, 0, 262137, 122, 0, 262139, 122, 0, 196611, 96, 0, 196614, 94, 0, 196624, 122, 0, 196626, 122, 0, 327673, 122, 0, 327674, 122, 0, 327675, 122, 0, 327676, 122, 0, 262148, 94, 0, 262150, 91, 0, 262153, 94, 0, 262160, 122, 0, 262162, 122, 0, 393213, 122, 0, 327696, 122, 0, 327698, 122, 0, 458749, 122, 0, 458750, 122, 0, 393232, 122, 0, 393234, 122, 0, 524286, 122, 0, 524287, 122, 0, 458768, 122, 0, 458770, 122, 0, 589821, 122, 0, 589823, 122, 0, 524288, 122, 0, 524304, 122, 0, 524306, 122, 0, 589825, 122, 0, 589826, 122, 0, 589827, 122, 0, 589839, 122, 0, 589840, 122, 0, 589842, 122, 0, 655361, 122, 0, 655362, 122, 0, 655364, 122, 0, 655373, 122, 0, 655374, 122, 0, 655375, 122, 0, 655376, 122, 0, 655378, 122, 0, 720899, 122, 0, 720900, 122, 0, 720901, 122, 0, 720902, 122, 0, 720903, 122, 0, 720906, 122, 0, 720907, 122, 0, 720908, 122, 0, 720909, 122, 0, 720910, 122, 0, 720911, 122, 0, 720913, 122, 0, 720914, 122, 0, 786433, 122, 0, 786434, 122, 0, 786435, 122, 0, 786436, 122, 0, 786438, 122, 0, 786439, 122, 0, 786440, 122, 0, 786441, 122, 0, 786442, 122, 0, 786443, 122, 0, 786445, 122, 0, 786450, 122, 0 )
_sections_unfolded = [ "Cell" ]

[node name="player" parent="walls" index="0" instance=ExtResource( 4 )]

position = Vector2( 662.742, -65.3532 )
_sections_unfolded = [ "Collision", "Material", "Pickable", "Transform", "Visibility", "Z Index", "collision" ]

[node name="NPC" parent="walls" index="1" instance=ExtResource( 5 )]

position = Vector2( 486.831, 66.9871 )

[node name="NPC2" parent="walls" index="2" instance=ExtResource( 5 )]

position = Vector2( 313.978, 121.281 )

[node name="fill" type="TileMap" parent="." index="3"]

mode = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 128, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -1769486, 127, 0, -1769470, 127, 0, -1572865, 127, 0, -1441799, 127, 0, -1376279, 127, 0, -1376273, 127, 0, -1310719, 127, 0, -1310713, 127, 0, -1179666, 127, 0, -1114122, 127, 0, -1114119, 127, 0, -1179634, 127, 0, -1048585, 127, 0, -1048584, 127, 0, -1048577, 127, 0, -1114112, 127, 0, -983062, 127, 0, -983050, 127, 0, -917508, 127, 0, -983024, 127, 0, -851982, 127, 0, -851975, 127, 0, -851962, 127, 0, -851956, 127, 0, -720913, 127, 0, -786423, 127, 0, -655352, 127, 0, -524311, 127, 0, -524310, 127, 0, -458772, 127, 0, -524268, 127, 0, -327694, 127, 0, -262158, 127, 0, -327666, 127, 0, -196632, 127, 0, -65557, 127, 0, -131058, 127, 0, 65521, 127, 0, 23, 127, 0, 196634, 127, 0, 393204, 127, 0, 327700, 127, 0, 327710, 127, 0, 524271, 127, 0, 589853, 127, 0, 720882, 127, 0, 720888, 127, 0, 655380, 127, 0, 655388, 127, 0, 786454, 127, 0, 1048575, 127, 0, 983057, 127, 0, 983066, 127, 0, 1179641, 127, 0, 1114117, 127, 0, 1114124, 127, 0, 1114144, 127, 0, 1179675, 127, 0, 1376252, 127, 0, 1310729, 127, 0, 1310741, 127, 0, 1441823, 127, 0, 1572868, 127, 0, 1572882, 127, 0, 1572888, 127, 0, 1572892, 127, 0, 1638436, 127, 0, 1769487, 127, 0, 1769508, 127, 0, 1900544, 127, 0, 1900574, 127, 0, 1966092, 127, 0, 2031641, 127, 0, 2097162, 127, 0, 2162709, 127, 0, 2359303, 127, 0, 2359311, 127, 0 )
_sections_unfolded = [ "Cell" ]

[node name="Sound" type="Node2D" parent="." index="4"]

visible = false
script = ExtResource( 6 )

[node name="OpenDoor" type="AudioStreamPlayer2D" parent="Sound" index="0"]

stream = ExtResource( 7 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="CloseDoor" type="AudioStreamPlayer2D" parent="Sound" index="1"]

stream = ExtResource( 8 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="CoinFlip" type="AudioStreamPlayer2D" parent="Sound" index="2"]

stream = ExtResource( 9 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="Switch" type="AudioStreamPlayer2D" parent="Sound" index="3"]

position = Vector2( 389.605, 139.438 )
stream = ExtResource( 10 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="MoveBlock" type="AudioStreamPlayer2D" parent="Sound" index="4"]

position = Vector2( 606.964, 110.73 )
stream = ExtResource( 11 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="ChopWood" type="AudioStreamPlayer2D" parent="Sound" index="5"]

stream = ExtResource( 12 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="FallenTree" type="AudioStreamPlayer2D" parent="Sound" index="6"]

stream = ExtResource( 13 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="OpenChest" type="AudioStreamPlayer2D" parent="Sound" index="7"]

stream = ExtResource( 14 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="LockedDoor" type="AudioStreamPlayer2D" parent="Sound" index="8"]

stream = ExtResource( 15 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="PickUp" type="AudioStreamPlayer2D" parent="Sound" index="9"]

stream = ExtResource( 16 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="TownMusic" type="AudioStreamPlayer2D" parent="Sound" index="10"]

stream = ExtResource( 17 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="ForestAmbience" type="AudioStreamPlayer2D" parent="Sound" index="11"]

stream = null
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="MoveAreas" type="Node2D" parent="." index="5"]

editor/display_folded = true
visible = false
position = Vector2( 14.3539, -4.1011 )
script = ExtResource( 18 )

[node name="MoveArea" parent="MoveAreas" index="0" instance=ExtResource( 19 )]

visible = false
position = Vector2( 930.324, -142.086 )

[node name="MoveTimer" type="Timer" parent="MoveAreas/MoveArea" index="1"]

process_mode = 1
wait_time = 0.01
one_shot = false
autostart = false

[node name="DoorArea" parent="MoveAreas" index="1" instance=ExtResource( 19 )]

visible = false
position = Vector2( 33.8958, 3.31246 )
scale = Vector2( 1.80287, 1.96195 )

[node name="DoorTimer" type="Timer" parent="MoveAreas/DoorArea" index="1"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="SwitchAreas" type="Node2D" parent="." index="6"]

editor/display_folded = true
visible = false
position = Vector2( 45.1122, -8.20224 )

[node name="SwitchArea1" parent="SwitchAreas" index="0" instance=ExtResource( 20 )]

position = Vector2( -269.356, 149.704 )
scale = Vector2( 1.48338, 2.02124 )

[node name="SceneManager" type="Node" parent="." index="7"]

script = ExtResource( 21 )

[connection signal="body_shape_entered" from="Chests/chest1" to="Chests" method="_on_chest1_body_shape_entered"]

[connection signal="body_shape_exited" from="Chests/chest1" to="Chests" method="_on_chest1_body_shape_exited"]

[connection signal="body_shape_entered" from="MoveAreas/MoveArea" to="MoveAreas" method="_on_MoveArea_body_shape_entered"]

[connection signal="timeout" from="MoveAreas/MoveArea/MoveTimer" to="SceneManager" method="_on_MoveTimer_timeout"]

[connection signal="body_shape_entered" from="MoveAreas/DoorArea" to="MoveAreas" method="_on_DoorArea_body_shape_entered"]

[connection signal="body_shape_exited" from="MoveAreas/DoorArea" to="MoveAreas" method="_on_DoorArea_body_shape_exited"]

[connection signal="timeout" from="MoveAreas/DoorArea/DoorTimer" to="SceneManager" method="_on_DoorTimer_timeout"]

[connection signal="body_shape_entered" from="SwitchAreas/SwitchArea1" to="SwitchAreas/SwitchArea1" method="_on_SwitchArea_body_shape_entered"]

[connection signal="body_shape_exited" from="SwitchAreas/SwitchArea1" to="SwitchAreas/SwitchArea1" method="_on_SwitchArea_body_shape_exited"]


